particulary fix of google chrome scrollbar update

--- a/src/client/app/+news/news.component.css
+++ b/src/client/app/+news/news.component.css
@@ -25,7 +25,6 @@
     height: 300px;
     background: white;
     padding: 20px;
-    overflow-y: scroll;
     box-shadow: 0 10px 30px 0 rgba(0, 0, 0, 0.15);
     box-sizing: border-box;
 }
